# school_ruijie

./: README-en.MD  README.MD  README.md  main.go  ruijie_template.sh
.github/: FUNDING.yml
.github/workflows/: Go-Release-Macos.yml  go-release-linux.yml  go.yml  release-windows.yml
C/jmu/: CMakeLists.txt  main.cpp
Linux/: ruijie_general.sh  ruijie_jmu.sh
Openwrt & LEDE/: ruijie_general.sh  ruijie_jmu.sh
Python/: ruijie.py
Rust/: Cargo.toml
Rust/src/: main.rs
core/: ruijie.go
golang/: go.mod  go.sum  ping_test.go  ruijie.go
golang/jmu/: ruijie.go
gui/: gui.go
